--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/sushi.png" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Sushiman</title>
+    <title>Kaseiki Umami</title>
   </head>
   <body>
     <header>
       <nav class="header__nav">
         <div class="header__logo">
-          <h4 data-aos="fade-down">Sushiman</h4>
+          <h4 data-aos="fade-down">Kaseiki Umami</h4>
           <div class="header__logo-overlay"></div>
         </div>
 
