--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
     <footer class="footer flex-between">
       <h3 class="footer__logo">
-        <span>Sushi</span>man
+        <span>Kaseiki</span>Umami
       </h3>
 
       <ul class="footer__nav">
